fix(vertical-nav): stop unnecessarily animating `overflow-y`
This prevents an Angular 14 developer warning.

closes #323

--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -159,6 +159,10 @@
       }
     }
 
+    .nav-group-children {
+      overflow-y: hidden;
+    }
+
     .nav-trigger,
     .nav-group-trigger {
       //Display
